[gd_scene load_steps=2 format=3 uid="uid://snakes_board"]

[ext_resource type="Script" path="res://scripts/snakes_board.gd" id="1"]

[node name="SnakesBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BoardGrid" type="GridContainer" parent="CenterContainer"]
layout_mode = 2
columns = 10

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0

[node name="RollButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ROLL DICE"

[node name="DiceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Dice: -"
horizontal_alignment = 1

[node name="TurnLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Turn: Player 1"
horizontal_alignment = 1
